adding some resources

--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -3,6 +3,6 @@
   <li><a href="{{ root_url }}/blog/archives">Archives</a></li>
   <li><a href="{{ root_url }}/docs/">Docs</a></li>
   <li><a href="{{ root_url }}/presentations/">Presentations</a></li>
-  <li><a href="{{ root_url }}/references/">References</a></li>
-  <li><a href="{{ root_url }}/pubkey.asc">PGP key</a></li>
+  <li><a href="{{ root_url }}/resources/">Resources</a></li>
+  <li><a href="{{ root_url }}/contact/">Contact</a></li>
 </ul>
